<resources>
    <string name="app_name">Petagram2</string>
    <string name="rate_me">Pulsame</string>
    <string name="mnu_about">Acerca de</string>
    <string name="mnu_contacto">Contacto</string>

    <string name="click_me">Click para detalle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lbl_datos">Datos de contacto</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellidos">Apellidos</string>
    <string name="lbl_mail">Correo</string>
    <string name="lbl_comment">Comentarios</string>
    <string name="btn_mail">Enviar</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="lbl_about_nombre">Javier Gonzalez</string>
    <string name="lbl_about_mail">javier.gonzalez.grandez@gmail.com</string>
</resources>
