<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactActivity">

    <include layout="@layout/detail_action_bar"/>

    <TextView
        android:id="@+id/lblDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/lbl_datos"
        android:paddingTop="@dimen/pad_vertical_long"
        android:text="@string/lbl_datos"
        android:textSize="@dimen/font_size_title"
        android:textStyle="bold|italic"
        tools:fontFamily="serif"
        tools:paddingBottom="@dimen/pad_vertical_long"
        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutNombre"
        android:padding="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize = "@dimen/font_size"
            android:hint="@string/lbl_nombre" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutApellidos"
        android:padding="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize = "@dimen/font_size"
            android:hint="@string/lbl_apellidos" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutMail"
        android:padding="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize = "@dimen/font_size"
            android:hint="@string/lbl_mail" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutComment"
        android:padding="1sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize = "@dimen/font_size"
            android:hint="@string/lbl_comment" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity= "bottom"
        >

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorText"
            android:text = "@string/btn_mail"
            android:onClick="btnMail_onClick"
            />

    </LinearLayout>
</LinearLayout>